--- a/static/popup.html
+++ b/static/popup.html
@@ -113,12 +113,12 @@
                         <input type="text" class="form-control rounded-3" id="gpt-key-value" placeholder="sk-dadsad" required>
                         <label for="gpt-key-value">Set API Key</label>
                     </div>
-                    <div class="form-floating mb-3">
-                        <select class="form-control rounded-3" name="engines" id="gpt-engines">
-                            <option value="">--Please choose an engine--</option>
-                        </select>
-                        <label for="gpt-engines">GPT Engines</label>
-                    </div>
+<!--                    <div class="form-floating mb-3">-->
+<!--                        <select class="form-control rounded-3" name="engines" id="gpt-engines">-->
+<!--                            <option value="">&#45;&#45;Please choose an engine&#45;&#45;</option>-->
+<!--                        </select>-->
+<!--                        <label for="gpt-engines">GPT Engines</label>-->
+<!--                    </div>-->
                     <!--<div class="form-floating mb-3">
                         <select  class="form-control rounded-3" name="temperature" id="gpt-temperatures">
                             <option value="">&#45;&#45;Please set GPT creativity&#45;&#45;</option>
@@ -128,10 +128,10 @@
 
                     <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" id="gpt-key-submit" type="button">Save</button>
                     <small class="text-body-secondary">Your key is safe and will not be shared with anyone. It will be stored in your local machine.</small>
-                    <p class="text-body-secondary"><a target="_blank"  href="https://platform.openai.com/account/api-keys">Get your API key from Open AI dashboard.</a> </p>
-                    <hr class="my-4">
-                    <h2 class="fs-5 fw-bold mb-3">For support or feedback</h2>
-                    <a href="https://www.ainotemaker.com/contact-8" target="_blank" class="btn btn-primary">Contact</a>
+<!--                    <p class="text-body-secondary"><a target="_blank"  href="https://platform.openai.com/account/api-keys">Get your API key from Open AI dashboard.</a> </p>-->
+<!--                    <hr class="my-4">-->
+<!--                    <h2 class="fs-5 fw-bold mb-3">For support or feedback</h2>-->
+<!--                    <a href="https://www.ainotemaker.com/contact-8" target="_blank" class="btn btn-primary">Contact</a>-->
 
                 </form>
             </div>
