updated local storage test extension

--- a/static/popup.html
+++ b/static/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Chrome Extension Popup</title>
-  <script src="popup.js"></script>
+  <script src="js/popup.js"></script>
 </head>
 <body>
   <form id="myForm">
