--- a/static/html/popup.html
+++ b/static/html/popup.html
@@ -14,6 +14,8 @@
     </style>
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="../js/popup.js"></script>
+
 </head>
 <body>
 
