--- a/static/html/popup.html
+++ b/static/html/popup.html
@@ -27,7 +27,8 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-   
+    <small class="text-body-secondary" id="saveKeyResponse"></small>
+    <br>
     <small class="text-body-secondary">Open AI key shared is safe and stored in your chrome local storage.</small>
     <small class="text-body-secondary"><a target="_blank"  href="https://platform.openai.com/account/api-keys">Get your API key from Open AI dashboard.</a> </small>
 
