--- a/static/html/popup.html
+++ b/static/html/popup.html
@@ -25,7 +25,7 @@
             <label for="inputValue">Enter your Open AI Key:</label>
             <input type="password" class="form-control  col-md-6" id="inputValue" name="inputValue" placeholder="sk-...JmFN">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Save</button>
     </form>
     <small class="text-body-secondary" id="saveKeyResponse"></small>
     <br>
